--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "huddle-components",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ragulraj28.github.io/huddlenowcomponent",
+  "homepage": "https://ragulraj28.github.io/huddlenow-component",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
